<resources>
    <string name="app_name">My Application</string>
    <string name="bulding_image">bulding image</string>
    <string name="todo">image</string>
    <string name="floating_button">floating button</string>
    <string name="singapore">Singapore</string>
    <string name="lence">Lecia M Typ 240</string>
    <string name="camera">Camera</string>
    <string name="settings">Settings</string>
    <string name="f_4_16s_iso_200">f/4 16s ISO 200</string>
    <string name="singapore_description">Singapore officially the Republic of Singapore, and often referred to the Lion City,the Garden City , ab=nd the RedDot, is a global city in Southeast Asia and the world’s only island city-state. it lines one degree (137 Km) nourth of the equator, at the southernmost tip of continental Asia and peninsular Malaysia, With Indonesia’s Riau Islands to the south. Singapore’s territory consists of the diamond-shaped main island and 62 islets.</string>
    <string name="upload">UPLOAD</string>
    <string name="discard">DISCARD</string>
</resources>