<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/singapore"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/camera"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:autofillHints="hint"
        android:inputType="text"
        android:text="@string/lence"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:text="@string/settings"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:autofillHints="hint"
        android:inputType="text"
        android:text="@string/f_4_16s_iso_200"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="383dp"
        android:layout_height="145dp"
        android:layout_marginTop="16dp"
        android:text="@string/singapore_description"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/gray"
        android:text="@string/upload"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="105dp"
        android:layout_height="45dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="68dp"

        android:backgroundTint="@color/gray"
        android:text="@string/discard"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="405dp"
        android:layout_height="181dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/image2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-8dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="78dp"
        android:layout_height="74dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/star"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="125dp" />
</androidx.constraintlayout.widget.ConstraintLayout>